package io.github.example.devtrack.learning.domain.model;

public enum GoalStatus {
  PLANNED,
  ACTIVE,
  COMPLETED,
  ARCHIVED
}
