@startuml
title Learning Domain

skinparam classAttributeIconSize 0

package "learning.domain.model" {
  class LearningGoal <<Aggregate Root>> {
    - id: LearningGoalId
    - title: GoalTitle
    - description: GoalDescription
    - period: GoalPeriod
    - status: GoalStatus
    + changeTitle(title)
    + changeDescription(description)
    + changePeriod(period)
    + complete()
    + isActive()
  }

  class StudySession <<Aggregate Root>> {
    - id: StudySessionId
    - learningGoalId: LearningGoalId
    - studyDate: LocalDate
    - duration: StudyDuration
    - content: StudySessionContent
    + revise(studyDate, duration, content)
  }

  class LearningGoalId <<Value Object>>
  class StudySessionId <<Value Object>>
  class GoalTitle <<Value Object>>
  class GoalDescription <<Value Object>>
  class GoalPeriod <<Value Object>>
  class StudyDuration <<Value Object>>
  class StudySessionContent <<Value Object>>

  enum GoalStatus {
    PLANNED
    ACTIVE
    COMPLETED
    ARCHIVED
  }
}

package "learning.domain.repository" {
  interface LearningGoalRepository {
    + save(goal)
    + findById(id)
    + findActive()
  }

  interface StudySessionRepository {
    + save(session)
    + findById(id)
    + findByLearningGoalId(learningGoalId)
    + sumDurationByLearningGoalId(learningGoalId)
  }
}

LearningGoal *-- LearningGoalId
LearningGoal *-- GoalTitle
LearningGoal *-- GoalDescription
LearningGoal *-- GoalPeriod
LearningGoal *-- GoalStatus

StudySession *-- StudySessionId
StudySession --> LearningGoalId : identity で参照
StudySession *-- StudyDuration
StudySession *-- StudySessionContent

LearningGoalRepository ..> LearningGoal
StudySessionRepository ..> StudySession

note right of LearningGoal
Type:
Aggregate Root

責務:
技術学習目標とその lifecycle を管理する。

Aggregate boundary:
LearningGoal のみ。StudySession は所有しない。

Invariant:
- title は空ではない
- target date は start date より前ではない
- この設計では completed goal を active に戻せない

Business Rule:
- complete() は status を COMPLETED に変更する
- active goals は repository 経由で照会できる

依存:
Pure Java のみ

永続化:
1 つの LearningGoal aggregate として保存する
end note

note right of StudySession
Type:
Aggregate Root

責務:
実際に行った 1 件の学習活動を記録する。

Aggregate boundary:
StudySession のみ。LearningGoal は LearningGoalId で参照する。

Invariant:
- learningGoalId は必須
- studyDate は必須
- duration は正
- content は空ではない

Business Rule:
- revise() は date、duration、content、note を修正できる
- total study time は StudySession record から算出する
- 一致する session がない場合、算出された study time は 0 になり得る

依存:
Pure Java のみ

永続化:
1 つの StudySession aggregate として保存する
end note

note bottom of StudySessionRepository
Type:
Repository

責務:
StudySession を永続化し、learning context が必要とする query operation を提供する。

Business Rule:
集計 query support を超えて duration calculation rule は所有しない。

永続化:
infrastructure persistence adapter が実装する。
end note

@enduml
